--- a/css/app.css
+++ b/css/app.css
@@ -37,10 +37,35 @@ h2 {font-weight: 75;}
 
 /** Styles for the deck of cards */
 
+@media screen and (max-width:768px) {
+
+    .deck {
+        width: 660px;
+        min-height: 680px;
+    }
+
+    .deck .card {
+        height: 125px;
+        width: 125px;
+    }
+
+}
+
+@media screen and (max-width:360px) {
+
+    .deck {
+        width: 300px;
+        min-height: 310px;
+    }
+
+    .deck .card {
+        height: 75px;
+        width: 75px;
+    }
+
+}
 
 .deck {
-    width: 660px;
-    min-height: 680px;
     background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
     padding: 32px;
     border-radius: 10px;
@@ -53,8 +78,6 @@ h2 {font-weight: 75;}
 }
 
 .deck .card {
-    height: 125px;
-    width: 125px;
     background: #2e3d49;
     font-size: 0;
     color: #fff;
