--- a/css/app.css
+++ b/css/app.css
@@ -37,56 +37,66 @@ h2 {font-weight: 75;}
 
 /** Styles for the deck of cards */
 
-@media screen and (max-width:768px) {
+@media screen and (min-width:360px) and (max-width:600px) {
 
-    .deck {
+    .deck {        
+        width: 320px;
+        min-height: 340px;
+        background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
+        padding: 22px;
+        border-radius: 10px;
+        box-shadow: 6px 8px 10px 0 rgba(46, 61, 73, 0.5);
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;
+        margin: 0 0 3em;
+    }
+
+    .deck .card {
+        height: 55px;
+        width: 55px;
+        background: #2e3d49;
+        font-size: 0;
+        color: #fff;
+        border-radius: 8px;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 2px 2px 10px 0 rgba(46, 61, 73, 0.5);
+    }
+
+}
+
+@media screen and (min-width:0=610px) and (max-width:1400px) {
+    .deck {        
         width: 660px;
         min-height: 680px;
+        background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
+        padding: 32px;
+        border-radius: 10px;
+        box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;
+        margin: 0 0 3em;
     }
 
     .deck .card {
         height: 125px;
         width: 125px;
+        background: #2e3d49;
+        font-size: 0;
+        color: #fff;
+        border-radius: 8px;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
     }
-
-}
-
-@media screen and (max-width:360px) {
-
-    .deck {
-        width: 300px;
-        min-height: 310px;
-    }
-
-    .deck .card {
-        height: 75px;
-        width: 75px;
-    }
-
-}
-
-.deck {
-    background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
-    padding: 32px;
-    border-radius: 10px;
-    box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 0 3em;
-}
-
-.deck .card {
-    background: #2e3d49;
-    font-size: 0;
-    color: #fff;
-    border-radius: 8px;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
 }
 
 .deck .card.open {
