--- a/css/app.css
+++ b/css/app.css
@@ -18,7 +18,7 @@ body {
 
 body {
     background: #ffffff url('../img/geometry2.png'); /* Background pattern from Subtle Patterns */
-    font-family: 'Coda', cursive;
+    font-family: Coda, cursive;
 }
 
 .container {
@@ -29,13 +29,8 @@ body {
 }
 
 h1 {
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 300;
-    text-align: center;
-}
-
-h2 {
-    font-weight: 75;
+    font-family: Coda, sans-serif;
+    font-size: 3rem;
     text-align: center;
 }
 
@@ -81,15 +76,6 @@ h2 {
         animation: rotation 2s  linear;
     }
 
-    .modal_body {
-        position: relative;
-        top: 50%;
-        left: 50%;
-        width: 300px;
-        background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
-        transform: translate(-60%, -70%);
-    }
-
 }
 
 @media screen and (min-width:661px) and (max-width:2000px) {
@@ -131,15 +117,6 @@ h2 {
         font-size: 33px;
         animation: rotation 2s  linear;
     }
-
-    .modal_body {
-        position: relative;
-        top: 70%;
-        left: 50%;
-        width: 400px;
-        background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
-        transform: translate(-60%, -70%);
-    }
 }
 
 .deck .card.open {
@@ -177,22 +154,40 @@ h2 {
 }
 
 .modal_background {
-    position: absolute;
+    text-align: center;
+    position: fixed;
+    width: 100%;
+    height: 100%;
     top: 0;
     left: 0;
-    bottom: 0;
-    height: 100%;
-    width: 100%;
     background: rgba(0, 0, 0, 0.5);
 }
 
+.modal_background::before {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+}
+.modal_body {
+    display: inline-block;
+    vertical-align: middle;    
+    position: relative;    
+    text-align: left;
+    background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
+    transform: translate(-60%, -70%);
+}
+
 .modal_heading {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    text-align: center;
     padding: 1em;
     margin: 1em;
     border-bottom: 1px solid #ddd;
+}
+
+.modal_title {
+    text-align: center;
+    font-size: 2rem;
 }
 
 .modal_close {
@@ -215,12 +210,13 @@ h2 {
     padding: 1rem;
 }
 
-button.modal_button {
+button {
     width: 60px;
     height: 30px;
     background-color: #2e3d49;
     color: #fff;
-    border-radius: 4px;
+    border-radius: 8px;
+    border: none;
 }
 
 .hide {
