--- a/css/app.css
+++ b/css/app.css
@@ -36,7 +36,7 @@ h1 {
 
 /** Styles for the deck of cards */
 
-@media screen and (min-width:360px) and (max-width:660px) {
+@media screen and (min-width:320px) and (max-width:660px) {
     .deck {        
         width: 320px;
         min-height: 340px;
@@ -170,10 +170,10 @@ h1 {
     vertical-align: middle;
 }
 .modal_body {
-    display: inline-block;
+    /*display: inline-block;*/
+    top:10%;
     vertical-align: middle;    
     position: relative;    
-    text-align: left;
     background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
     transform: translate(-60%, -70%);
 }
@@ -187,11 +187,6 @@ h1 {
 
 .modal_title {
     text-align: center;
-    font-size: 2rem;
-}
-
-.modal_close {
-    font-weight: bold;
     font-size: 2rem;
 }
 
